--- a/frontend/src/Components/SignIn/SignIn.css
+++ b/frontend/src/Components/SignIn/SignIn.css
@@ -1,102 +1,247 @@
-/* 
-.gradient-custom-2 {
-   
-    background: #fccb90;
-  
-   
-    background: -webkit-linear-gradient(
-      to right,
-      #ee7724,
-      #d8363a,
-      #dd3675,
-      #b44593
-    );
-  
-  
-    background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+body {
+  font-family: "Open Sans", sans-serif;
+  height: 100vh;
+  background-color: #444;
+  /* background-size: cover; */
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  min-height: 100%;
+  padding: 140px;
+  background: rgba(108, 113, 113, 0.85);
+}
+
+.login {
+  border-radius: 2px 2px 5px 5px;
+  padding: 10px 20px 20px 20px;
+  width: 90%;
+  max-width: 320px;
+  background: #ffffff;
+  position: relative;
+  padding-bottom: 80px;
+  box-shadow: 0px 1px 5px rgba(0, 178, 202, 0.3);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.login.loading button {
+  max-height: 100%;
+  padding-top: 50px;
+}
+
+.login.loading button.spinner {
+  opacity: 1;
+  top: 40%;
+}
+
+.login.ok button {
+  background-color: #8bc34a;
+}
+
+.login.ok button .spinner {
+  border-radius: 0;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  height: 20px;
+  animation: none;
+  transform: rotateZ(-45deg);
+}
+
+.login input {
+  display: block;
+  padding: 15px 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  border: 1px solid #ddd;
+  transition: border-width 0.2s ease;
+  border-radius: 2px;
+  color: #ccc;
+}
+
+.login input + i.fas {
+  color: #fff;
+  font-size: 1em;
+  position: absolute;
+  margin-top: -47px;
+  opacity: 1;
+  left: 0;
+  transition: all 0.1s ease-in;
+}
+
+.login input:focus {
+  outline: none;
+  color: #444;
+  border-color: #2196f3;
+  border-left-width: 35px;
+}
+
+.login input:focus + i.fas {
+  opacity: 1;
+  left: 30px;
+  transition: all 0.25s ease-out;
+}
+
+.login a {
+  font-size: 0.8em;
+  color: #2d79c4;
+  text-decoration: none;
+}
+
+.login .title {
+  color: #05bcff;
+  font-size: 2em;
+  font-weight: bold;
+  margin: 10px 0 30px 0;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
+  text-align: center;
+  position: relative;
+}
+
+.login .title:before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 2px;
+  bottom: 0;
+  left: 25%;
+  background-color: #05bcff;
+  animation: title-before 2s ease-in-out infinite;
+}
+
+@keyframes title-before {
+  0% {
+    transform: scaleX(0);
   }
-  
-  @media (min-width: 768px) {
-    .gradient-form {
-      height: 100vh !important;
-    }
+  50% {
+    transform: scaleX(1);
   }
-  @media (min-width: 769px) {
-    .gradient-custom-2 {
-      border-top-right-radius: 0.3rem;
-      border-bottom-right-radius: 0.3rem;
-    }
+  100% {
+    transform: scaleX(0);
   }
-  
-  .button {
-    display: inline-block;
-    padding: 0.75rem 1.25rem;
-    border-radius: 10rem;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1rem;
-    letter-spacing: 0.15rem;
-    transition: all 0.3s;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-    &:after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: $color;
-      border-radius: 10rem;
-      z-index: -2;
-    }
-    &:before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0%;
-      height: 100%;
-      background-color: darken($color, 15%);
-      transition: all 0.3s;
-      border-radius: 10rem;
-      z-index: -1;
-    }
-    &:hover {
-      color: #fff;
-      &:before {
-        width: 100%;
-      }
-    }
+}
+
+.login .title {
+  color: #05bcff;
+  font-size: 2em;
+  font-weight: bold;
+  margin: 10px 0 30px 0;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
+  text-align: center;
+  position: relative;
+  transform-style: preserve-3d;
+}
+
+.login .title span {
+  display: inline-block;
+  position: relative;
+  transform-style: preserve-3d;
+  animation: rotate 4s infinite linear;
+}
+
+.login .title span:before,
+.login .title span:after {
+  content: attr(data-title);
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #fff;
+  opacity: 0.8;
+  text-shadow: 1px 1px #333;
+  transform: translate3d(0, 0, -2px);
+}
+
+.login .title span:before {
+  transform: rotateY(0deg);
+}
+
+.login .title span:after {
+  transform: rotateY(180deg);
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(0deg);
   }
- 
-  * {
-    font-family: Arial;
-    text-decoration: none;
-    font-size: 20px;
+  100% {
+    transform: rotateY(360deg);
   }
-  .container {
-    padding-top: 50px;
-    margin: 0 auto;
-    width: 100%;
-    text-align: center;
+}
+
+.login button {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  background: #2196f3;
+  color: #fff;
+  display: block;
+  border: none;
+  margin-top: 20px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  max-height: 60px;
+  border: 0px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0 0 2px 2px;
+  transform: rotateZ(0deg);
+  transition: all 0.1s ease-out;
+  border-bottom-width: 7px;
+}
+
+.login button .spinner {
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  border: 4px solid #ffffff;
+  border-top-color: rgba(255, 255, 255, 0.3);
+  border-radius: 100%;
+  left: 50%;
+  top: 0;
+  opacity: 0;
+  margin-left: -20px;
+  margin-top: -20px;
+  animation: spinner 0.6s infinite linear;
+  transition: top 0.3s 0.3s ease, opacity 0.3s 0.3s ease,
+    border-radius 0.3s ease;
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+}
+
+.login:not(.loading) button:hover {
+  box-shadow: 0px 1px 3px #2196f3;
+}
+
+.login:not(.loading) button:focus {
+  border-bottom-width: 4px;
+}
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-top: 2px solid rgba(255, 255, 255, 0.2);
+  border-right: 2px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  border-left: 2px solid #ffffff;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
   }
-  h1 {
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    margin-bottom: 2rem;
-    color: #777;
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
   }
-  span {
-    display: block;
-    margin-top: 2rem;
-    font-size: 0.7rem;
-    color: #777;
-    a {
-      font-size: 0.7rem;
-      color: #999;
-      text-decoration: underline;
-    }
-  }
-   */
+}
