--- a/frontend/src/Components/Stocks/Inward/Inward.css
+++ b/frontend/src/Components/Stocks/Inward/Inward.css
@@ -1,5 +1,5 @@
 table {
-  margin-top: 2rem;
+  margin-top: 1rem;
   border-collapse: collapse;
   width: 100%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -8,20 +8,22 @@ table {
 th,
 td {
   padding: 1rem;
-  text-align: left;
+  text-align: center;
 }
 
 th {
-  background-color: #007bff;
-  color: rgb(0, 0, 0);
+  background-color: #0e1113;
+  color: rgb(255, 255, 255);
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #fff9f9c6;
 }
 
 tr:hover {
-  background-color: #ddd;
+  background-color: #b0f4ff;
+  transform: scale(1.005);
+  transition: transform 0.25s ease-in-out;
 }
 
 input[type="number"] {
@@ -30,4 +32,25 @@ input[type="number"] {
   border: none;
   border-radius: 4px;
   background-color: #f2f2f2;
+}
+
+.btn {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  max-width: 200px;
+  background-color: #00ddff;
+  color: #000000;
+  border: none;
+  border-radius: 5px;
+  padding: 12px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  margin-top: 1.5rem;
+}
+
+.btn:hover {
+  background-color: #0aacf7;
+  color: #000000;
 }
