--- a/frontend/src/Components/Godown/Godown.css
+++ b/frontend/src/Components/Godown/Godown.css
@@ -1,6 +1,48 @@
-.table-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.add-godown-btn {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  /* width: 70%;
+  max-width: 200px; */
+  background-color: #00ddff;
+  color: #000000;
+  border: none;
+  border-radius: 5px;
+  /* padding: 12px 20px; */
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  margin-top: 1.5rem;
+}
+.popup {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: #49d269;
+  color: white;
+  border-radius: 5px;
+  animation-name: popup;
+  animation-duration: 2s;
+}
+
+.popupDel {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: #bf1c1c;
+  color: white;
+  border-radius: 5px;
+  animation-name: popup;
+  animation-duration: 2s;
+}
+@keyframes popup {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
