--- a/frontend/src/Components/Sidebar/Sidebar.css
+++ b/frontend/src/Components/Sidebar/Sidebar.css
@@ -8,7 +8,7 @@
 }
 
 #header .closemenu {
-  color: #000;
+  color: #ffffff;
   position: absolute;
   right: 0;
   z-index: 9999;
@@ -33,7 +33,7 @@
 }
 
 #header .pro-sidebar-inner {
-  background-color: #ffffff;
+  background-color: rgb(51, 51, 51);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -67,10 +67,11 @@
   ul
   .pro-inner-item
   .pro-icon-wrapper {
-  background-color: #6384e6;
-  color: #000;
+  background-color: #fefefe;
+  color: #000000;
   border-radius: 50%;
   transition: 0.3s ease;
+  font-size: large;
 }
 
 #header
@@ -90,11 +91,11 @@
   ul
   .pro-inner-item
   .pro-icon-wrapper:hover {
-  background-color: #8ec324;
+  background-color: #fefefd;
 }
 
 #header .pro-sidebar-inner .pro-sidebar-layout .active {
-  background-color: #bbb1b1;
+  background-color: #574ac0;
 }
 
 #header .logo {
