--- a/frontend/src/Components/Stocks/Outward/Outward.css
+++ b/frontend/src/Components/Stocks/Outward/Outward.css
@@ -8,14 +8,45 @@ td {
 }
 
 .btn {
-  font-size: 20px;
-  padding: 0.2rem 0.4rem;
+  /* font-size: 20px; */
+  /* padding: 0.2rem 0.4rem;
   margin: 0.2rem;
-  margin-top: 2rem;
+  margin-top: 1rem; */
+}
+.browse-button {
+  text-align: center;
+  align-items: center;
+  width: 100%;
+  max-width: 150px;
+  background-color: #574ac0;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+
+  font-size: large;
 }
 
 .button-container .btn {
   font-size: 14px;
   padding: 0.2rem 0.5rem;
   margin: 0.25rem;
+}
+.outward-container {
+  height: 200px;
+  width: auto;
+}
+.outward-head-container {
+  width: fit-content;
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
+
+  margin: 1;
+}
+.form-control-sm {
+  height: 56px;
+  margin-left: -20px;
 }
