--- a/frontend/src/Components/Stocks/Outward/Outward.css
+++ b/frontend/src/Components/Stocks/Outward/Outward.css
@@ -18,7 +18,7 @@ td {
   align-items: center;
   width: 100%;
   max-width: 150px;
-  background-color: #574ac0;
+  background-color: #3822e2;
   color: #ffffff;
   border: none;
   border-radius: 5px;
