--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,6 @@ code {
 .css-15wwp11-MuiTableHead-root {
   background-color: black;
 }
+.css-zd7ftd-MuiFormControl-root {
+  padding-right: 20px;
+}
