--- a/frontend/src/Components/Godown/Godown.css
+++ b/frontend/src/Components/Godown/Godown.css
@@ -2,17 +2,20 @@
   display: block;
   margin: 0 auto;
   text-align: center;
-  /* width: 70%;
-  max-width: 200px; */
-  background-color: #00ddff;
-  color: #000000;
+  width: 100%;
+  max-width: 150px;
+  background-color: #574ac0;
+  color: #ffffff;
   border: none;
   border-radius: 5px;
   /* padding: 12px 20px; */
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   margin-top: 1.5rem;
+  font-size: large;
+  min-height: 40px;
 }
+/* abc */
 .popup {
   position: fixed;
   bottom: 10px;
