--- a/frontend/src/Components/SignIn/SignIn.css
+++ b/frontend/src/Components/SignIn/SignIn.css
@@ -8,8 +8,20 @@ body {
 * {
   box-sizing: border-box;
 }
+.popupDel {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: #bf1c1c;
+  color: white;
+  border-radius: 5px;
+  animation-name: popup;
+  animation-duration: 2s;
+}
 
 .wrapper {
+  background-image: url(https://ik.imagekit.io/ccyubla1p9v/wp-content/uploads/2023/01/shutterstock_1930996376-1.png);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -17,7 +29,6 @@ body {
   width: 100%;
   min-height: 100%;
   padding: 140px;
-  background: rgba(108, 113, 113, 0.85);
 }
 
 .login {
@@ -187,9 +198,8 @@ body {
   display: block;
   border: none;
   margin-top: 20px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  left: auto;
+  bottom: auto;
   max-height: 60px;
   border: 0px solid rgba(0, 0, 0, 0.1);
   border-radius: 0 0 2px 2px;
