--- a/frontend/src/Components/Stocks/Inward/Inward.css
+++ b/frontend/src/Components/Stocks/Inward/Inward.css
@@ -68,6 +68,7 @@ input[type="number"] {
 .table-container {
   overflow: auto;
   height: 400px;
+  overflow-x: hiddenx;
 }
 .inward-container {
   height: 200px;
@@ -86,4 +87,9 @@ input[type="number"] {
   height: 52px;
   border-width: 1;
   border-color: rgb(207, 207, 216);
+}
+
+.narrow-input {
+  width: 250px; /* Adjust the width as needed */
+  height: 50px;
 }
