--- a/frontend/src/Components/MasterProduct/Product.css
+++ b/frontend/src/Components/MasterProduct/Product.css
@@ -6,10 +6,23 @@
   size: 30%;
 }
 .product-container {
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  align-content: space-between;
+}
+
+.product-container > div {
+  margin-right: 20px;
+}
+
+.product-inner-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 10px;
+  overflow: auto;
+  overflow-x: hidden;
+  height: 400px;
+  margin-top: 30px;
 }
