--- a/frontend/src/Components/Stocks/Inward/Inward.css
+++ b/frontend/src/Components/Stocks/Inward/Inward.css
@@ -44,7 +44,7 @@ input[type="number"] {
   margin: 0 auto;
   text-align: center;
   width: 100%;
-  max-width: 200px;
+  max-width: 136px;
   background-color: #574ac0;
   color: #ffffff;
   border: none;
@@ -65,10 +65,10 @@ input[type="number"] {
   font-size: x-large;
 }
 
-.table-container {
+.inward-table-container {
   overflow: auto;
-  height: 400px;
-  overflow-x: hiddenx;
+  height: 300px;
+  overflow-x: hidden;
 }
 .inward-container {
   height: 200px;
@@ -79,7 +79,7 @@ input[type="number"] {
   min-width: 100%;
   display: flex;
   flex-direction: row;
-  margin: 2;
+  margin-bottom: 21px;
 }
 
 .form-control-sm,
@@ -92,4 +92,9 @@ input[type="number"] {
 .narrow-input {
   width: 250px; /* Adjust the width as needed */
   height: 50px;
+}
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
